Initial commit for getting Samza to work with Java 11